--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -13,10 +13,10 @@ import RedisCard from '@site/src/theme/RedisCard';
 <Tabs
   defaultValue="Redis"
   values={[
-    {label: 'Redis Enterprise', value: 'Redis Enterprise'},
     {label: 'Redis', value: 'Redis'},
+    {label: 'Redis Enterprise', value: 'Redis Enterprise'},
   ]}>
-  <TabItem value="Redis Enterprise">
+  <TabItem value="Redis">
 
 ## Redis
 
