--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -102,7 +102,7 @@ OK
 
 ## Redis
 
-### Pre-requisite:
+### Pre-requisite
 
 Ensure that Docker is installed in your system. Follow https://docs.docker.com/engine/install/ if you haven’t installed yet.
 
