--- a/docs/explore/index-explore.mdx
+++ b/docs/explore/index-explore.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-explore
-title: Explore Data
+title: Explore Your Data
 sidebar_label: Explore
 slug: /explore/
 ---
@@ -26,7 +26,7 @@ RedisInsight provides an intuitive and efficient GUI for Redis, allowing you to 
 
 ---
 
-## Adding a Redis Database
+### Adding a Redis Database to RedisInsight
 
 * <a href="https://docs.redislabs.com/latest/ri/using-redisinsight/add-instance/#add-a-standalone-redis-database" target="_blank" rel="noopener">Standalone Redis</a>
 * <a href="https://docs.redislabs.com/latest/ri/using-redisinsight/add-instance/#add-a-redis-cluster-database" target="_blank" rel="noopener">Redis cluster</a>
@@ -35,6 +35,6 @@ RedisInsight provides an intuitive and efficient GUI for Redis, allowing you to 
 * <a href="https://docs.redislabs.com/latest/ri/using-redisinsight/add-instance/#connecting-to-elasticache" target="_blank" rel="noopener">Elasticache</a>
 * <a href="https://docs.redislabs.com/latest/ri/using-redisinsight/auto-discover-databases/">Automatically Discovering Databases</a>
 
-## Related Information
+### Related Information
 
 * <a href="https://docs.redislabs.com/latest/ri/" target="_blank" rel="noopener">Official RedisInsight Documentation</a>
