--- a/docs/howtos/RateLimiting/index-ratelimiting.mdx
+++ b/docs/howtos/RateLimiting/index-ratelimiting.mdx
@@ -119,6 +119,7 @@ To make deploys work, you need to create free account in https://redislabs.com/t
 
 ### Implementing Rate Limiter using Java
 
+![My Image](ratelimitingjava.png)
 
 ```
 git clone https://github.com/deliveryweb/redis-rate-limiting-java.git
