Added Redis DataSource for Grafana

--- a/docs/explore/redisdatasource/index-redisdatasource.mdx
+++ b/docs/explore/redisdatasource/index-redisdatasource.mdx
@@ -7,5 +7,105 @@ slug: /explore/redisdatasource
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-Redis Data Source for Grafana
+The Redis Data Source for Grafana is a plug-in that allows users to connect to the Redis database and build dashboards in Grafana to easily monitor Redis and application data. It provides an out-of-the-box predefined dashboard, but also lets you build customized dashboards tuned to your specific needs.
 
+##  Features and Capabilities
+
+- Grafana 7.1 and later with a new plug-in platform supported.
+- Data Source can connect to any Redis database. No special configuration is required.
+- Redis Cluster and Sentinel supported since version 1.2.
+- Data Source supports:
+
+   - [RedisTimeSeries](https://oss.redislabs.com/redistimeseries/): TS.GET, TS.INFO, TS.MRANGE, TS.QUERYINDEX, TS.RANGE
+   - [RedisGears](https://oss.redislabs.com/redisgears/): RG.DUMPREGISTRATIONS, RG.PYEXECUTE, RG.PYSTATS
+   - [RedisSearch](https://oss.redislabs.com/redisearch/): FT.INFO
+   - [RedisGraph](https://oss.redislabs.com/redisgraph/): GRAPH.QUERY, GRAPH.SLOWLOG
+
+## Getting Started
+
+### 1. Install using `grafana-cli`
+
+Use the `grafana-cli` tool to install from the commandline:
+
+```bash
+grafana-cli plugins install redis-datasource
+```
+
+### 2. Run using `docker`
+
+```bash
+docker run -d -p 3000:3000 --name=grafana -e "GF_INSTALL_PLUGINS=redis-datasource" grafana/grafana
+```
+
+### 3. Run using `docker-compose`
+
+Project provides `docker-compose.yml` to start Redis with all Redis Labs modules and Grafana.
+
+```bash
+docker-compose up
+```
+
+Open Grafana in your browser and configure Redis Data Source. You can add as many data sources as you want to support multiple Redis databases.
+
+![Datasource](https://raw.githubusercontent.com/RedisGrafana/grafana-redis-datasource/master/src/img/datasource.png)
+
+There are certain settings that can be configured based on your own setup:
+
+- Grafana port
+- Data Source URL
+
+### 4.  Configure Grafana port in `docker-compose.yml`
+
+If standard port 3000 is occupied by another application update the port to bind Grafana to
+
+```
+    ports:
+      - '3000:3000'
+```
+
+### 5. Configure Data Source URL in `provisioning/datasources/redis.yaml`
+
+If Redis is running and listening on localhost:6379 no changes are required
+
+```
+    url: redis://localhost:6379
+```
+
+If Redis is running as Docker container on MacOS, please update host to `host.docker.internal`
+
+```
+    url: redis://host.docker.internal:6379
+```
+
+If Redis is running as Docker container on Linux, please update host to `redis`
+
+```
+    url: redis://redis:6379
+```
+
+### 6. Run using `docker-compose` for development
+
+Data Source have to be built following [BUILD](https://github.com/RedisGrafana/grafana-redis-datasource/blob/master/BUILD.md) instructions before starting using `docker-compose/dev.yml` file.
+
+```bash
+docker-compose -f docker-compose/dev.yml up
+```
+
+### Supported commands
+
+Data Source supports various Redis commands using custom components and provides a unified interface to query any command.
+
+![Query](https://raw.githubusercontent.com/RedisGrafana/grafana-redis-datasource/master/src/img/query.png)
+
+## Template variables
+
+Template variables can query any command and use other variables as parameters.
+
+![Variables](https://raw.githubusercontent.com/RedisGrafana/grafana-redis-datasource/master/src/img/variables.png)
+
+## Learn more
+
+- [Introducing the Redis Data Source Plug-in for Grafana](https://redislabs.com/blog/introducing-the-redis-data-source-plug-in-for-grafana/)
+- [How to Use the New Redis Data Source for Grafana Plug-in](https://redislabs.com/blog/how-to-use-the-new-redis-data-source-for-grafana-plug-in/)
+- [3 Real-Life Apps Built with Redis Data Source for Grafana](https://redislabs.com/blog/3-real-life-apps-built-with-redis-data-source-for-grafana/)
+- [Real-time observability with Redis and Grafana](https://grafana.com/go/observabilitycon/real-time-observability-with-redis-and-grafana/)
