Added Movie Database Tutorial

--- a/docs/howtos/Moviesdatabase/index-moviesdatabase.mdx
+++ b/docs/howtos/Moviesdatabase/index-moviesdatabase.mdx
@@ -1,6 +1,9 @@
 ---
 id: index-moviesdatabase
-title: How to build Movies Database using Redis
+title: How to list and search Movies Database using Redisearch
 sidebar_label: How to build Movies database using Redis
 slug: /howtos/moviesdatabase
 ---
+
+
+
