Added Steps to Moviedatabase

--- a/docs/howtos/Moviesdatabase/advancedoption/index-advancedoption.mdx
+++ b/docs/howtos/Moviesdatabase/advancedoption/index-advancedoption.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-advancedoption
-title: Advanced Option
-sidebar_label: Advanced Option
+title: 9. Advanced Option
+sidebar_label: 9. Advanced Option
 slug: /howtos/moviesdatabase/advancedoption
 ---
 
