--- a/docs/howtos/Moviesdatabase/aggregation/index-aggregation.mdx
+++ b/docs/howtos/Moviesdatabase/aggregation/index-aggregation.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-aggregation
-title: Aggregations
-sidebar_label: Aggregation
+title: 8. Aggregations
+sidebar_label: 8. Aggregation
 slug: /howtos/moviesdatabase/aggregation
 ---
 
