--- a/docs/howtos/Moviesdatabase/create/index-create.mdx
+++ b/docs/howtos/Moviesdatabase/create/index-create.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-create
-title: Create Index
-sidebar_label: Create Index
+title: 3. Create Index
+sidebar_label: 3. Create Index
 slug: /howtos/moviesdatabase/create
 ---
 
