--- a/docs/howtos/Moviesdatabase/import/index-import.mdx
+++ b/docs/howtos/Moviesdatabase/import/index-import.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-import
-title: Import datasets
-sidebar_label: Import datasets
+title: 6. Import datasets
+sidebar_label: 6. Import datasets
 slug: /howtos/moviesdatabase/import
 ---
 
