--- a/docs/howtos/Moviesdatabase/install/index-install.mdx
+++ b/docs/howtos/Moviesdatabase/install/index-install.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-install
-title: Install Redisearch
-sidebar_label: Install Redisearch
+title: 2. Install Redisearch
+sidebar_label: 2. Install Redisearch
 slug: /howtos/moviesdatabase/install
 ---
 
