--- a/docs/howtos/Moviesdatabase/intro/index-intro.mdx
+++ b/docs/howtos/Moviesdatabase/intro/index-intro.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-intro
-title: Introduction
-sidebar_label: Introduction
+title: 1. Introduction
+sidebar_label: 1. Introduction
 slug: /howtos/moviesdatabase/intro
 ---
 
