--- a/docs/howtos/Moviesdatabase/manage/index.manage.mdx
+++ b/docs/howtos/Moviesdatabase/manage/index.manage.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-manage
-title: Manage Index
-sidebar_label: Manage Index
+title: 5. Manage Index
+sidebar_label: 5. Manage Index
 slug: /howtos/moviesdatabase/manage
 ---
 
