--- a/docs/howtos/Moviesdatabase/query/index-query.mdx
+++ b/docs/howtos/Moviesdatabase/query/index-query.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-query
-title: Query Data
-sidebar_label: Query Data
+title: 4. Query Data
+sidebar_label: 4. Query Data
 slug: /howtos/moviesdatabase/query
 ---
 
