--- a/docs/howtos/Moviesdatabase/querymovies/index-querymovies.mdx
+++ b/docs/howtos/Moviesdatabase/querymovies/index-querymovies.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-querymovies
-title: Query Movies
-sidebar_label: Query Movies
+title: 7. Query Movies
+sidebar_label: 7. Query Movies
 slug: /howtos/moviesdatabase/querymovies
 ---
 
