--- a/docs/howtos/Moviesdatabase/sampleapp/index-sampleapp.mdx
+++ b/docs/howtos/Moviesdatabase/sampleapp/index-sampleapp.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-sampleapp
-title: Sample Application
-sidebar_label: Sample Application
+title: 10. Sample Application
+sidebar_label: 10. Sample Application
 slug: /howtos/moviesdatabase/sampleapp
 ---
 
